--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,9 @@ android {
     buildToolsVersion "31.0.0"
 
     defaultConfig {
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
+        }
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments += [
@@ -47,9 +50,20 @@ apply plugin: "kotlin-kapt"
 
 dependencies {
 
+    // Tensorflow
+    def tensorflow_version = "0.3.1"
+    implementation "org.tensorflow:tensorflow-lite-task-vision:$tensorflow_version"
+    implementation "org.tensorflow:tensorflow-lite-task-text:$tensorflow_version"
+    implementation "org.tensorflow:tensorflow-lite-task-audio:$tensorflow_version"
+    implementation "org.tensorflow:tensorflow-lite-support:$tensorflow_version"
+    implementation "org.tensorflow:tensorflow-lite:0.0.0-nightly-SNAPSHOT"
+
+    // Card Stack
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
 
     //Room
-    def room_version = "2.3.0"
+    def room_version = "2.4.0"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
